--- a/First Markdown.Rmd
+++ b/First Markdown.Rmd
@@ -17,6 +17,8 @@ When you click the **Knit** button a document will be generated that includes bo
 
 ```{r cars}
 summary(cars)
+##This was added by Jim. Never can have too much data!!!
+Summary(cars$speed)
 rnorm(10, mean = 20, sd = 5)
 ```
 
